# minilog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: common.h  log_msg.h
include/minilog/: async_logger.h  cfg.h  common.h  file_helper.h  log_msg.h  logger.h  minilog.h  mpmc_blocking_q.h  null_mutex.h  registry.h  synchronous_factory.h  thread_pool.h
include/minilog/include/minilog/: file_helper.h
include/minilog/sinks/: ansicolor_sink.h  base_sink.h  basic_file_sink.h  callback_sink.h  console_sink.h  db_sink.h  sink.h  stdout_color_sinks.h
include/sinks/: sink.h
src/: main.cpp  thread_pool.cpp
